test/compile-errors/destructure-errors.crow
main nat^(_ string[]) summon
	p (nat, string) = 1, "one"

	x0, y0 string = p
	x1 bool, y1 = p
	x2 bool, y2 symbol = p

	x3, y3, z3 = p
	x4, y4 = 42
	()
